--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "10.0.10",
     "@emotion/styled": "^10.0.11",
     "react": "16.8.6",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "16.8.6",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
