--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
-  "arrowParens": "always",
+  "printWidth": 80,
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
-  "printWidth": 100
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
